main page icons

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                     <p>ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.</p>
                 </div>
                 <div class="container">
-                    <h3>Background</h3>
+                    <h3><i class="fas fa-globe mr-3"></i>Background</h3>
                     <p>English has been the effective lingua franca since the ascendance of the British Empire in the 19th century. It is still used as a common global language to this day, and proficiency is especially prized in countries competing to export to the massive combined economy of the United States, Canada, Australia, Great Britain and Ireland. This has created a global industry worth billions of dollars; in rich manufacturing centers such as South Korea, there are even celebrity ESL tutors making seven figures! Students from all over the world learn English from native English teachers—often traveling to dedicated schools overseas—forming a robust community with its own Meetups and conferences. Our team includes highly qualified ESL professionals with years of experience in the industry, and we are partnered with established ESL organizations. This includes one of the largest related Meetups and Facebook pages in the world, whose growing online community created the need for our upcoming blockchain-powered ESL app.</p>
                     <p><img class="img-fluid" src="assets/img/ESL%20industry.png" alt="" /> </p>
                 </div>
                 <div class="container">
-                    <h3>Challenge</h3>
+                    <h3><i class="fas fa-fire mr-3"></i>Challenge</h3>
                     <p>While we take English for granted, there are billions who are eager to learn the English language but are prevented from doing so due to many existing barriers in the current English learning system from cost barriers to inefficient distribution systems and poor proficiency testing systems. The limitations in the current system has resulted in varying education levels across the board often only the wealthy could afford quality education and are often charged astronomical rates for language schools. The inefficiencies and lack of transparency in the education delivery & grading system has resulted in many exploits where profiteering schools & exam providers are known to ‘sell language proficiency levels’ to language learners based on their ability to pay and not their accomplishments in learning.</p>
                     <p>Globalization and the rise of technology have allowed many to have access to the internet. One of our goals is to make English learning accessible from anywhere in the world regardless of social economic background. We seek to create a blockchain system that removes inefficiencies and provide the benefits of blockchain to the language learning space. As long as you have a phone and internet connection, you can be connected to a global network of native speakers who can help you learn and become more fluent at communicating in English.</p>
                 </div>
@@ -91,14 +91,14 @@
                 </div>
                 <!-- Roadmap Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead">(Codename Student) ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead">(Codename Tutor) The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network through in house development and development grants. </p></div>
-                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead">(Codename Graduate) ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. A portion of the developer pool will be allocated to liquidity on major exchanges.</p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead"><b>(Codename STUDENT)</b> ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead"><b>(Codename TUTOR)</b> The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network through in house development and development grants. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead"><b>(Codename GRADUATE)</b> ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. A portion of the developer pool will be allocated to liquidity on major exchanges.</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Governance & DAO</h3></p><p class="lead">(Codename Teacher) A governance system will be implemented and token holders are invited to partake in the direction and vote on operational aspects of ESL Coin TRX. Voting will be rewarded with tokens from the voting pool.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Cross Chain Compatability</h3></p><p class="lead">(Codename Professor) ESL Coin TRX will work to become cross chain compatible with the ETH network, Polkadot network and other networks. </p></div>
-                    <div class="col-lg-4 ml-auto"><p><h3>Academic Outreach</h3></p><p class="lead">(Codename Dean) ESL Coin network will be reaching out to major colleges and universities to build up adoption of ecosystem dapps such as test score transmission platform and verification system for educators.</p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Governance & DAO</h3></p><p class="lead"><b>(Codename TEACHER)</b> A governance system will be implemented and token holders are invited to partake in the direction and vote on operational aspects of ESL Coin TRX. Voting will be rewarded with tokens from the voting pool.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Cross Chain Compatibility</h3></p><p class="lead"><b>(Codename PROFESSOR)</b> ESL Coin TRX will work to become cross chain compatible with the ETH network, Polkadot network and other networks. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Academic Outreach</h3></p><p class="lead"><b>(Codename DEAN)</b> ESL Coin network will be reaching out to major colleges and universities to build up adoption of ecosystem dapps such as test score transmission platform and verification system for educators.</p></div>
                 </div>
                 <!-- Roadmap Section Button-->
                 <!--//<div class="text-center mt-4">
@@ -177,17 +177,17 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="container">
-                    <h3>Opportunity</h3>
-                    <p>The ESL Industry is estimate to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accomodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt this billion dollar industry.</p>
+                    <h3><i class="fas fa-space-shuttle mr-3"></i>Opportunity</h3>
+                    <p>The ESL Industry is estimate to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accommodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt this billion dollar industry.</p>
                 </div>
                 <div class="container">
-                    <h3>Team</h3>
-                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio econoimc backgrounds. The ESL Coin TRX project is a parallel indepedent fork of the Eth project. We do hope to work together when we reach Phase 5 - CODENAME Professor (Cross Chain Compatability).</p>
+                    <h3><i class="fas fa-users mr-3"></i>Team</h3>
+                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio economic backgrounds. The ESL Coin TRX project is a parallel independent fork of the Eth project. We do hope to work together when we reach Phase 5 - CODENAME Professor (Cross Chain Compatibility).</p>
                 </div>
                 <div class="container">
-                    <h3>Tokenomics</h3>
+                    <h3><i class="fas fa-database mr-3"></i>Tokenomics</h3>
                     <p>ESL Coin TRX is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
-                    <p>The Tron implmentation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
+                    <p>The Tron implementation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
                     <div class="row">
                         <div class="col-lg-6 ml-auto">
                             <div class="container">
@@ -236,8 +236,10 @@
                     </div>
                 </div>
                 <div class="container">
-                    <h3>Governance and DAO</h3>
-                    <p>ESL Coin TRX will eventaully evolve into a Decentralized Autonomous Organization (DAO) such that token holders can participate in the governance and operations of the ecosystem.</p>
+                    <h3><i class="fas fa-gavel mr-3"></i>Governance and DAO</h3>
+                    <p>ESL Coin TRX will eventually evolve into a Decentralized Autonomous Organization (DAO) such that token holders can participate in the governance and operations of the ecosystem.</p>
+                    <p>Run for the ESL Coin TRX senate, contribute to community development and receive airdrops and rewards.</p>
+                    <p>More information on the DAO and what to expect can be found at the <a class=" text-secondary" href="involve.html#governance">governance section</a></p>
                 </div>
             </div>
         </section>
@@ -255,13 +257,13 @@
                 <!-- Involve Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p><h3>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p>
+                        <p><h3><i class="fas fa-bullhorn mr-3"></i>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p><h3>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p>
+                        <p><h3><i class="fas fa-wrench mr-3"></i>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p><h3>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
+                        <p><h3><i class="fas fa-users mr-3"></i>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
                     </div>
                 </div>
             </div>
