--- a/involve.html
+++ b/involve.html
@@ -156,13 +156,13 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Developer Section Content-->
-                <p>Participation in the developers grants program is as easy as 1-2-3</p>
+                <p>ESL Coin TRX has set aside 26% of the premine tokens for the developers grant program. The language learning space is a 80 billion dollar space and we invite developers to create dApps that accept ESL Coin TRX tokens.</p>
                 <div class="row">
                     <div class="col-lg-4 mr-auto">
-                        <p><h3>Apply for the grant</h3></p><p class="lead">Send us an <a href="mailto:eslcoin@protonmail.com">email</a> including your dApp outline and road map. Include the intended use of the dApp, what need is it addressing in the ESL space and your development level.</p>
+                        <p><h3>Apply for the grant</h3></p><p class="lead">Send us an <a class="text-secondary" href="mailto:eslcoin@protonmail.com">email</a> including your dApp outline and road map. Include the intended use of the dApp, what need is it addressing in the ESL space and your development level.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p><h3>Develop a working Prototype dApp</h3></p><p class="lead">Create a working prototype dApp for the ESL industry that uses ESL Coin TRX. There are many dApps opportunties in the ESL space from educators (tutors) accrediation to exam score recording. The sky is the limit! </p>
+                        <p><h3>Develop a working Prototype dApp</h3></p><p class="lead">Create a working prototype dApp for the ESL industry that uses ESL Coin TRX. There are many dApps opportunities in the ESL space from educators accrediation to exam score recording. The sky is the limit! </p>
                     </div>
                     <div class="col-lg-4 ml-auto">
                         <p><h3>Present Prototype </h3></p><p class="lead">Show us your working prototype via a YouTube video and include the dApp contract link. Our team will review the dApp and if it has merit, we will list your dApp on our website and send you a developers bounty. </p>
