--- a/auction.html
+++ b/auction.html
@@ -89,9 +89,9 @@
                 </div>
                 <div class="container"></div>
                     <h3>Technical Launch</h3>
-                    <p>The goal of the technical launch is to raise awareness of the ESL Coin TRX token within the technical community, create a development fund and build up a liquidity fund for the public launch of the token on major exchanges. The technical launch will be conducted through an initial auction series with a daily emission stating at 250k token a day and reducing every day. Unlike Initial Coin Offerings, the intended audience are technical investors/participants and developers who do believe in creating an ecosystem to disrupt the 80 Billion dollars language learning space. During the technical launch and anyone wanting to participate must interact directly with a proto UI or the smart contract. To reward token particpants during this stage, 95% of the daily auction is shared among token stakers.</p>
+                    <p>The goal of the technical launch is to raise awareness of the ESL Coin TRX token within the technical community, create a development fund and build up a liquidity fund for the public launch of the token on major exchanges. The technical launch will be conducted through an initial auction series with a daily emission stating at 250k token a day and reducing every day. Unlike Initial Coin Offerings, the intended audience are technical investors/participants and developers who do believe in creating an ecosystem to disrupt the 80 Billion dollars language learning space. During the technical launch and anyone wanting to participate must interact directly with a proto UI or the smart contract. To reward token participants during this stage, 95% of the daily auction is shared among token stakers.</p>
                     <p>Technical participants can elect to be part of the <a href="involve.html#charter">charter members program</a> and receive a share of day 1 and 2 auction revenue see <a href="involve.html#charter">charter members program</a>.</p>
-                    <p>Non technical partipants can partake in this project through other means. See our <a href="involve.html">get invovled page</a> for more information.</p>
+                    <p>Non technical participants can partake in this project through other means. See our <a href="involve.html">get involved page</a> for more information.</p>
                     <h3>Public Launch</h3>    
                     <p>During phase 3 (CODENAME Graduation), ESL Coin TRX will be released to the public through a combination of an in house exchange and public crypto exchanges. A portion of the developer pool will be allocated to providing liquidity on exchanges. </p>
                     <p>The auction will continue on through a dedicated auction page & UI. The daily emission significantly reduced. </p>
@@ -138,6 +138,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrx"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
