--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <!--Invitation to Join-->
-                <p class="mb-5">More dApps will be added over time. Community developers are invited to partipate in the <a href ="involve.html#developer">developers grant program</a>.</p>
+                <p class="mb-5">More dApps will be added over time. Community developers are invited to participate in the <a href ="involve.html#developer">developers grant program</a>.</p>
             </div>
         </section>
         <!-- About Section-->
@@ -285,7 +285,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrx"><i class="fab fa-fw fa-telegram"></i></a>
-                    </div>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About ESL Coin TRX</h4>
@@ -362,7 +362,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tutormatch.png" alt="" />                                    
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">TutorMatch is the ‘Tinder’ match making service connecting English native speakers (Language Buddies) with ESL learners. TutorMatch makes it possible for native learners to make a passive income on the go simply by particpating in casual conversations with english learners. English learners can pick and choose their language buddy and tutors simply by swiping left or right. Rewards for native speakers are based on length of conversation, quality of conversation (rating from english learner) and overall reputation. Native speakers with higher reputation level can qualify to become an english tutor which unlocks more rewards.</p>
+                                    <p class="mb-5">TutorMatch is the ‘Tinder’ match making service connecting English native speakers (Language Buddies) with ESL learners. TutorMatch makes it possible for native learners to make a passive income on the go simply by participating in casual conversations with English learners. English learners can pick and choose their language buddy and tutors simply by swiping left or right. Rewards for native speakers are based on length of conversation, quality of conversation (rating from English learner) and overall reputation. Native speakers with higher reputation level can qualify to become an English tutor which unlocks more rewards.</p>
                                     <p class="mb-5">Using ESL Coin TRX, micropayments can be made possible without the worries of high gas fees on the Ethereum platform.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -398,7 +398,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/academic_record.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        The current legacy system requires the use of postal service to send physical academic transacripts and test scores to different institutions. Often times, transcripts and test certificates are prone to foagery. Using the power of smart contracts, school grades and exam scores can be stored onto the blockchain ensuring transparency, immutability and availability.
+                                        The current legacy system requires the use of postal service to send physical academic transcripts and test scores to different institutions. Often times, transcripts and test certificates are prone to forgery. Using the power of smart contracts, school grades and exam scores can be stored onto the blockchain ensuring transparency, immutability and availability.
                                     </p>                                    
                                         <h4>**Process**</h4>
                                         <ol>
@@ -444,7 +444,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/diargram_tpdaap-1420x947.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Using AI technology, users can get instant AI translation from English to a variety of different languages. Users desiring optimal translation output may request to have the AI output be reviewed by a pool of language natives. This system allows natives of foreign languages make passive income on the side in the from of ESLCoin tokens which can be spent on other ESLCoin services in the future or sold at an exchange for FIAT currency.</p>
+                                    <p class="mb-5">Using AI technology, users can get instant AI translation from English to a variety of different languages. Users desiring optimal translation output may request to have the AI output be reviewed by a pool of language natives. This system allows natives of foreign languages make passive income on the side in the from of ESL Coin TRX tokens which can be spent on other ESL Coin TRX services in the future or sold at an exchange for FIAT currency.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
