--- a/index.html
+++ b/index.html
@@ -243,6 +243,86 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- As Mentioned Section
+        <section class="page-section bg-secondary text-white mb-0" id="mentions">
+            <div class="container">
+                <h2 class="page-section-heading text-center text-uppercase text-white">Media Mentions:</h2>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>               
+                <div class="row">
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://dappradar.com/tron/high-risk/esl-coin">
+                            <img class="img-fluid" src="assets/img/mentions/dappradar.svg" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://tronfarms.org/">
+                            <img class="img-fluid" src="assets/img/mentions/tronfarms_logo.svg" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://www.trontab.com">
+                            <img class="img-fluid" src="assets/img/mentions/trontab.png" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://www.stateofthedapps.com/">
+                            <img class="img-fluid" src="assets/img/mentions/stateofthedapps.png" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://www.dappstats.com/">
+                            <img class="img-fluid" src="assets/img/mentions/dappstats.svg" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://dapp-world.com/">
+                            <img class="img-fluid" src="assets/img/mentions/dappworld.png" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://dappradar.com/tron/high-risk/esl-coin">
+                            <img class="img-fluid" src="assets/img/mentions/dappcom.png" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://dapp.review/">
+                            <img class="img-fluid" src="assets/img/mentions/dappreview.svg" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-2 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal">
+                            <a href="https://dapponline.io/">
+                            <img class="img-fluid" src="assets/img/mentions/dapponline.svg" alt="" />
+                        </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>-->
+
+        
         <!-- Get Involved Section-->
         <section class="page-section" id="involve">
             <div class="container">
