--- a/involve.html
+++ b/involve.html
@@ -127,7 +127,7 @@
                     </div>
                     <h3>Day 2 Charter Members</h3>
                     <div class="divider-custom-icon fa-7x">
-                        <i class="fas fa-user"></i>
+                        <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
@@ -136,9 +136,8 @@
                     <div class="container text-center">
                         <p>To participate in Charter Member Program, please send specified Tron to address:</p>
                         <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
-                        <p>Current spot price <h3>10,000 TRX</h3></p>
-                        <p>ESL will be sent out within 24 hours of day 1 auction.</p>
-                        <p>To ensure a faster turn around time, DM admin a message on Telegram</p>
+                        <p>Current price for charter member seat <h3>500 TRX</h3> Seat price will increase with each reservation. The limit to day 2 seats available is 10.</p>
+                        <p>ESL tokens will be sent out to participating addresses within 24 hours of day 1 auction.</p>
                         <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 500,000 TRX, 225,000 TRX will be split 5 ways giving each charter member 45,000 TRX.</i></p>
                         </div>      
                 </div>
