--- a/involve.html
+++ b/involve.html
@@ -127,7 +127,7 @@
                     </div>
                     <h3>Day 2 Charter Members</h3>
                     <div class="divider-custom-icon fa-7x">
-                        <i class="fas fa-spinner fa-pulse"></i>
+                        <i class="fas fa-user"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
