--- a/index.html
+++ b/index.html
@@ -242,7 +242,19 @@
                     <p>More information on the DAO and what to expect can be found at the <a class=" text-secondary" href="involve.html#governance">governance section</a></p>
                 </div>
             </div>
-        </section>
+                <!-- Contract Section Button
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="https://tronscan.org/#/contract/">
+                        <i class="fas fa-book mr-2"></i>
+                        Live ESL Coin TRX Contract.
+                    </a>
+                    <a class="btn btn-xl btn-outline-light" href="https://www.diffchecker.com/">
+                        <i class="fas fa-code mr-2"></i>
+                        ESL Coin Contract compared to DSP.
+                    </a>
+                </div>
+                -->
+            </section>
 
 
         <!-- As Mentioned Section
