--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <!-- About Section Content-->
                 <div class="container">
                     <h3><i class="fas fa-space-shuttle mr-3"></i>Opportunity</h3>
-                    <p>The ESL Industry is estimate to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accommodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt this billion dollar industry.</p>
+                    <p>The ESL Industry is estimated to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accommodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt & decentralize this multi billion dollar industry.</p>
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-users mr-3"></i>Team</h3>
@@ -192,17 +192,17 @@
                         <div class="col-lg-6 ml-auto">
                             <div class="container">
                                 <p><b>Ecosystem</b>  | 33.33% | 1,000,000 ESL</p>
-                                <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, exchange listings, hiring, etc.</p>
+                                <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, hiring, governance & DAO etc.</p>
                                 <ul>
                                     <li>Tokens Vested over 24 months</li>
-                                    <li>4.00% released immediately</li>
+                                    <li>4.00% budgeted for launch month</li>
                                     <li>1.27% released each month</li>
                                 </ul>
                                 <br>
                             </div>
                             <div class="container">
                                 <p><b>Launch Liquidity</b>  | 20.00% | 600,000 ESL</p>
-                                <p>ESL tokens reserved for listing on major exchanges (Eg. Just Swap and USwap).</p>
+                                <p>ESL tokens reserved for liquidity with in-house & external exchanges (Eg. Just Swap and USwap).</p>
                                 <br>
                             </div>
                             <div class="container">
