--- a/auction.html
+++ b/auction.html
@@ -46,7 +46,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">Starting in:</p>
                 <br>
                 <p id="demo" class="masthead-heading text-uppercase mb-0"></p>
-                <script>
+                <--<script>
                     // Set the date we're counting down to
                     var countDownDate = new Date("Nov 30, 2020 16:00:00").getTime();
                     
@@ -75,7 +75,7 @@
                         document.getElementById("demo").innerHTML = "LAUNCHED!";
                       }
                     }, 1000);
-                    </script>
+                    </script>-->
             </div>
         </header>
         <!-- Technical Launch Info Section-->
