--- a/auction.html
+++ b/auction.html
@@ -43,10 +43,10 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Auction</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Starting in:</p>
+                <!--<p class="masthead-subheading font-weight-light mb-0">Starting in:</p>
                 <br>
                 <p id="demo" class="masthead-heading text-uppercase mb-0"></p>
-                <--<script>
+                <script>
                     // Set the date we're counting down to
                     var countDownDate = new Date("Nov 30, 2020 16:00:00").getTime();
                     
